Comics in event front covers now rendering correctly.

--- a/src/index.css
+++ b/src/index.css
@@ -96,9 +96,9 @@ body {
 
 .characterView{
   position: absolute;
-  right: 2px;
+  right: 20px;
   top: 214px;
-  height: 540px;
+  height: 460px;
   border: 5px solid white;
   border-radius: 25px;
   padding: 15px;
@@ -148,19 +148,19 @@ body {
 }
 
 .thumbnails {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.thumbnails img {
+  margin: 0 auto;
+  width: 100%;
+}
+
+/* .thumbnails {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between; /* or space-around */
-}
-
-.thumbnails a {
-  display: inline-block;
-  margin-bottom: 8px;
-  width: calc(50% - 4px);
-}
-
-.thumbnails @media screen and (min-width: 50em) {
-  a {
-    width: calc(25% - 6px);
-  }
-}
+  justify-content: center;
+} */
